--- a/GoingOn/XStoreProxy.Tests/XStoreProxy.Tests.csproj
+++ b/GoingOn/XStoreProxy.Tests/XStoreProxy.Tests.csproj
@@ -85,9 +85,6 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="NewsImageBlobStorageTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Common.Tests\Common.Tests.csproj">
       <Project>{D362A6E1-A218-4E3D-8D1F-0A8FC1822219}</Project>
       <Name>Common.Tests</Name>
@@ -95,6 +92,10 @@
     <ProjectReference Include="..\Model\Model.csproj">
       <Project>{73D68FF8-7F66-426F-8320-89BC224D3B09}</Project>
       <Name>Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Repository\Repository.csproj">
+      <Project>{87DE0C26-CC33-4111-9756-5543ACB4CC9B}</Project>
+      <Name>Repository</Name>
     </ProjectReference>
     <ProjectReference Include="..\XStoreProxy\XStoreProxy.csproj">
       <Project>{90e34909-07f8-4eac-bf0e-285474bfd909}</Project>
