--- a/GoingOn/XStoreProxy.Tests/XStoreProxy.Tests.csproj
+++ b/GoingOn/XStoreProxy.Tests/XStoreProxy.Tests.csproj
@@ -108,6 +108,10 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="BlobStoreTests.cs" />
+    <Compile Include="TableStoreTests.cs" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
