--- a/GoingOn/packages/repositories.config
+++ b/GoingOn/packages/repositories.config
@@ -7,6 +7,7 @@
   <repository path="..\Frontend\packages.config" />
   <repository path="..\FrontendWebRole.Tests\packages.config" />
   <repository path="..\FrontendWebRole\packages.config" />
-  <repository path="..\Storage.Tests\packages.config" />
-  <repository path="..\Storage\packages.config" />
+  <repository path="..\Repository.Tests\packages.config" />
+  <repository path="..\XStoreProxy.Tests\packages.config" />
+  <repository path="..\XStoreProxy\packages.config" />
 </repositories>
