--- a/GoingOn/Model/Model.csproj
+++ b/GoingOn/Model/Model.csproj
@@ -41,9 +41,12 @@
   <ItemGroup>
     <Compile Include="EntitiesBll\NewsBll.cs" />
     <Compile Include="EntitiesBll\UserBll.cs" />
+    <Compile Include="IImageManager.cs" />
+    <Compile Include="ImageManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <Import Project="..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
