--- a/GoingOn/Repository/Repository.csproj
+++ b/GoingOn/Repository/Repository.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AzureRepositoryException.cs" />
+    <Compile Include="RepositoryException.cs" />
     <Compile Include="IBaseNewsRepository.cs" />
     <Compile Include="IHotNewsRepository.cs" />
     <Compile Include="INewsImageRepository.cs" />
