Finished thumbnail controller

--- a/GoingOn/Repository.Tests/Repository.Tests.csproj
+++ b/GoingOn/Repository.Tests/Repository.Tests.csproj
@@ -55,7 +55,7 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NewsImageRepositoryTests.cs" />
+    <Compile Include="ImageRepositoryTests.cs" />
     <Compile Include="NewsRepositoryTests.cs" />
     <Compile Include="UserRepositoryTests.cs" />
   </ItemGroup>
