--- a/GoingOn/FrontendWebRole.Tests/FrontendWebRole.Tests.csproj
+++ b/GoingOn/FrontendWebRole.Tests/FrontendWebRole.Tests.csproj
@@ -73,6 +73,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http.Extensions, Version=2.2.28.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Net.Http.2.2.28\lib\net45\System.Net.Http.Extensions.dll</HintPath>
@@ -140,6 +141,7 @@
   <ItemGroup>
     <Compile Include="Controllers\GoingOnApiControllerTests.cs" />
     <Compile Include="Controllers\HotNewsControllerTests.cs" />
+    <Compile Include="Controllers\NewsThumbnailImageControllerTests.cs" />
     <Compile Include="Controllers\NewsImageControllerTests.cs" />
     <Compile Include="Controllers\UserControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -148,6 +150,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
+    <Content Include="goten.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
