--- a/GoingOn/Common/Common.csproj
+++ b/GoingOn/Common/Common.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Spatial, Version=5.6.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -61,6 +62,7 @@
   <ItemGroup>
     <Compile Include="City.cs" />
     <Compile Include="HttpClientExtensions.cs" />
+    <Compile Include="ImageHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GOUriBuilder.cs" />
   </ItemGroup>
