--- a/GoingOn/Frontend/Frontend.csproj
+++ b/GoingOn/Frontend/Frontend.csproj
@@ -58,6 +58,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http.Extensions">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.18\lib\net45\System.Net.Http.Extensions.dll</HintPath>
     </Reference>
@@ -141,6 +142,7 @@
     <Compile Include="Links\NewsLinkFactory.cs" />
     <Compile Include="Links\Rels.cs" />
     <Compile Include="Links\UserLinkFactory.cs" />
+    <Compile Include="Common\MediaTypeHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\ApiBusinessLogicValidationChecks.cs" />
     <Compile Include="Validation\ApiInputValidationChecks.cs" />
