--- a/GoingOn/FrontendWebRole.Tests/FrontendWebRole.Tests.csproj
+++ b/GoingOn/FrontendWebRole.Tests/FrontendWebRole.Tests.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Controllers\NewsThumbnailImageControllerTests.cs" />
     <Compile Include="Controllers\NewsImageControllerTests.cs" />
     <Compile Include="Controllers\UserControllerTest.cs" />
+    <Compile Include="Controllers\VoteControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\NewsControllerTest.cs" />
